--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ license = "Private"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11.9"
+python = "3.11.9"
 fastapi = "^0.115.5"
 uvicorn = "^0.32.1"
 python-multipart = "^0.0.17"
