--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "3.11.9"
 fastapi = "^0.115.5"
 uvicorn = "^0.32.1"
 python-multipart = "^0.0.17"
+gunicorn = "^23.0.0"
 
 
 [build-system]
