--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ fastapi = "^0.115.5"
 uvicorn = "^0.32.1"
 python-multipart = "^0.0.17"
 gunicorn = "^23.0.0"
+twilio = "^9.3.7"
 
 
 [build-system]
