--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ uvicorn = "^0.32.1"
 python-multipart = "^0.0.17"
 gunicorn = "^23.0.0"
 twilio = "^9.3.7"
+langgraph = "^0.2.53"
 
 
 [build-system]
